# office-hours-intake-bot

./: .coverage  .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
app/: chat.py  config.py  main.py  rag.py  summary.py
docs/: dialogue-flow.md  intake-schema.json  system-prompt.md
rag-corpus/general/: non_course_meetings.md  office_hours_scope.md
rag-corpus/spa212/: common_errors.md  grammar_topics.md
scripts/: funnel-off.sh  funnel-on.sh  generate_training_data.py  setup-environment.sh
specs/: implementation.md  planning.md  progress.md
static/: index.html
tests/: conftest.py  test_main.py  test_rag.py  test_summary.py
training-data/: persona_matrix.json  test.jsonl  train.jsonl  valid.jsonl
